k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress

spec:
  rules:
# add this host (or whatever of your choice) and corresponding address to /etc/hosts
  - host: test.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: tgtraffic
              port:
                number: 5005
